--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Fastjs",
+  "name": "fastjs",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -10,7 +10,7 @@
   "dependencies": {
     "@ant-design/icons-vue": "^6.1.0",
     "ant-design-vue": "^3.2.15",
-    "fastjs-cli": "^2.4.4",
+    "fastjs-cli": "^2.4.5",
     "fastjs-next": "^1.2.1",
     "highlight.js": "^11.7.0",
     "less": "^4.1.3",
