--- a/package.json
+++ b/package.json
@@ -11,8 +11,9 @@
     "@ant-design/icons-vue": "^6.1.0",
     "ant-design-vue": "^3.2.15",
     "fastjs-cli": "^2.4.5",
-    "fastjs-next": "^1.2.1",
+    "fastjs-next": "^1.3.0",
     "highlight.js": "^11.7.0",
+    "js-cookie": "^3.0.1",
     "less": "^4.1.3",
     "less-loader": "^11.1.0",
     "vite-plugin-require": "^1.1.10",
