--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "fastjs",
   "private": true,
-  "version": "1.3.0",
+  "version": "1.3.0-1",
   "type": "module",
   "scripts": {
     "dev": "fastjs dev",
