--- a/package.json
+++ b/package.json
@@ -4,18 +4,19 @@
   "version": "1.3.0-4",
   "type": "module",
   "scripts": {
-    "dev": "fastjs dev",
-    "build": "fastjs build"
+    "dev": "vite",
+    "build": "vite build"
   },
   "dependencies": {
     "@ant-design/icons-vue": "^6.1.0",
-    "ant-design-vue": "^3.2.14",
-    "fastjs-cli": "^2.4.7",
+    "animejs": "^3.2.1",
+    "ant-design-vue": "^4.0.6",
     "fastjs-next": "^1.3.0",
     "highlight.js": "^11.7.0",
     "js-cookie": "^3.0.1",
     "less": "^4.1.3",
     "less-loader": "^11.1.0",
+    "vite-plugin-mkcert": "^1.16.0",
     "vite-plugin-require": "^1.1.10",
     "vite-require": "^0.2.3",
     "vue": "^3.2.41",
@@ -24,6 +25,6 @@
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^3.2.0",
-    "vite": "^3.2.3"
+    "vite": "^5.0.0"
   }
 }
