--- a/package.json
+++ b/package.json
@@ -1,30 +1,30 @@
 {
-  "name": "fastjs",
+  "name": "fastjs.cc",
   "private": true,
-  "version": "1.3.0-4",
+  "version": "v1.0.0-alpha.1",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build"
   },
   "dependencies": {
-    "@ant-design/icons-vue": "^6.1.0",
+    "@ant-design/icons-vue": "^7.0.1",
     "animejs": "^3.2.1",
-    "ant-design-vue": "^4.0.6",
+    "ant-design-vue": "^4.0.7",
     "fastjs-next": "^1.3.0",
-    "highlight.js": "^11.7.0",
-    "js-cookie": "^3.0.1",
-    "less": "^4.1.3",
-    "less-loader": "^11.1.0",
-    "vite-plugin-mkcert": "^1.16.0",
-    "vite-plugin-require": "^1.1.10",
+    "highlight.js": "^11.9.0",
+    "js-cookie": "^3.0.5",
+    "less": "^4.2.0",
+    "less-loader": "^11.1.3",
+    "vite-plugin-mkcert": "^1.17.1",
+    "vite-plugin-require": "^1.1.11",
     "vite-require": "^0.2.3",
-    "vue": "^3.2.41",
-    "vue-router": "^4.1.6",
-    "vuex": "^4.0.2"
+    "vue": "^3.3.8",
+    "vue-router": "^4.2.5",
+    "vuex": "^4.1.0"
   },
   "devDependencies": {
-    "@vitejs/plugin-vue": "^3.2.0",
-    "vite": "^5.0.0"
+    "@vitejs/plugin-vue": "^4.5.0",
+    "vite": "^5.0.2"
   }
 }
