--- a/.github/workflows/pr-labeled.yml
+++ b/.github/workflows/pr-labeled.yml
@@ -15,6 +15,7 @@ jobs:
     steps:
       - name: Reply to Pull Request
         uses: peter-evans/create-or-update-comment@v3
+        if: "${{ github.event.label.name == 'Resolution: Invalid'}}"
         with:
           issue-number: ${{ github.event.number }}
           body: |
@@ -29,8 +30,10 @@ jobs:
         uses: actions/github-script@v7
         with:
           script: |
-            const pr = github.context.payload.pull_request;
-            const label = github.context.payload.label;
+            console.log(github);
+            console.log(context);
+            const pr = github.event.pull_request;
+            const label = github.event.label;
             if (label.name === 'Resolution: Invalid') {
               github.rest.pulls.update({
                 pull_number: pr.number,
