--- a/.github/workflows/pr-labeled.yml
+++ b/.github/workflows/pr-labeled.yml
@@ -19,12 +19,13 @@ jobs:
         with:
           issue-number: ${{ github.event.number }}
           body: |
-            We are happy to see you're contributing to fastjs, but we are unable to merge this pull request for now, because:
+            We are happy to see you're contributing to fastjs, but we are unable to merge this pull request for now, because of:
             - This pull request does not fix a bug.
             - This pull request need to have some changes.
             - This pull request doesn't have a valid issue.
             - You did not follow our [Contributing Guidelines](https://docs.fastjs.cc/other/contributing.html).
             - This pull request violates our [Code of Conduct](https://docs.fastjs.cc/other/code-of-conduct.html).
+            - Other reasons.
 
       - name: Close Pull Request
         uses: actions/github-script@v7
