--- a/package.json
+++ b/package.json
@@ -10,20 +10,21 @@
   "dependencies": {
     "@ant-design/icons-vue": "^7.0.1",
     "animejs": "^3.2.2",
-    "ant-design-vue": "^4.0.7",
+    "ant-design-vue": "^4.1.2",
     "highlight.js": "^11.9.0",
     "js-cookie": "^3.0.5",
+    "jsfast": "^1.0.0-alpha.6",
     "less": "^4.2.0",
-    "less-loader": "^11.1.3",
-    "vite-plugin-mkcert": "^1.17.1",
+    "less-loader": "^12.2.0",
+    "vite-plugin-mkcert": "^1.17.5",
     "vite-plugin-require": "^1.1.14",
     "vite-require": "^0.2.3",
-    "vue": "^3.3.11",
-    "vue-router": "^4.2.5",
+    "vue": "^3.4.23",
+    "vue-router": "^4.3.1",
     "vuex": "^4.1.0"
   },
   "devDependencies": {
-    "@vitejs/plugin-vue": "^4.5.2",
-    "vite": "^4.5.1"
+    "@vitejs/plugin-vue": "^5.0.4",
+    "vite": "^5.2.9"
   }
 }
