--- a/.github/workflows/issue-labeled.yml
+++ b/.github/workflows/issue-labeled.yml
@@ -17,12 +17,12 @@ jobs:
         if: "${{ github.event.label.name == 'Resolution: Cannot Replicate'}}"
         uses: actions-cool/issues-helper@v3
         with:
-          actions: 'create-comment'
+          actions: "create-comment"
           token: ${{ secrets.GITHUB_TOKEN }}
           issue-number: ${{ github.event.issue.number }}
           body: |
             Thanks for reporting this issue. But we're unable to replicate your issue, if you are able to create a reproducer or add details to provide more context, please reply to this issue.
-            
+
             **We will close this issue in 15 days if no further information is provided**.
 
   invalid:
@@ -32,7 +32,7 @@ jobs:
         if: "${{ github.event.label.name == 'Resolution: Invalid'}}"
         uses: actions-cool/issues-helper@v3
         with:
-          actions: 'create-comment'
+          actions: "create-comment"
           token: ${{ secrets.GITHUB_TOKEN }}
           issue-number: ${{ github.event.issue.number }}
           body: |
@@ -47,8 +47,8 @@ jobs:
         if: "${{ github.event.label.name == 'Resolution: Invalid'}}"
         uses: actions-cool/issues-helper@v3
         with:
-          actions: 'close-issues'
+          actions: "close-issues"
           token: ${{ secrets.GITHUB_TOKEN }}
           issue-number: ${{ github.event.issue.number }}
-          labels: 'Resolution: Invalid'
-          comment: 'This issue is closed because it is invalid.'
+          labels: "Resolution: Invalid"
+          comment: "This issue is closed because it is invalid."
