--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "devDependencies": {
+    "sass": "^1.76.0",
     "typescript": "^5.2.2",
     "vite": "^5.2.8"
   },
